2007-07-1 - 0.2:

 - Refactored most of the module code, fixing the install system in the process
 - Renamed all the modules to conform with standards.
 

2007-02-16 - 0.1.2:

 - Tags can now be weighted. Parsing follows first weight, then text order.
 - The same tag name can be registered by different modules. Conflicts in the tag namespace 
   can be resolved by the admin, on a per-format basis.
 - Unified the infrastructure; *all* tags are now provided by modules. Admin-created tags 
   are provided through this module's own _xbbcode hook.

2007-02-12 - 0.1.1:

 - Fixed a bug that broke self-closing tags.
 - Fixed a bug that caused strings of form "$name" to disappear from dynamically parsed tags.
 - Fixed a bug that added backslashes to quote characters in dynamic tags.
 
 - Added multiple-arguments functionality for static tags.